...
                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aMy-AY-g5H">
                                        <rect key="frame" x="0.0" y="0.0" width="103" height="35"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ChangeThemeButtonId"/>
                                        <color key="tintColor" name="SecondaryColor"/>
                                        <state key="normal" title="Button"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nNF-Yn-44X" userLabel="Add Button">
                                        <rect key="frame" x="353" y="0.0" width="47" height="35"/>
                                        <accessibility key="accessibilityConfiguration" identifier="AddNewPatientButtonId"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="35" id="E3l-4p-Q9T"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add Patient Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cgl-jE-JJy">
                                                <rect key="frame" x="0.0" y="25" width="390" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="NameFieldId"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add Patient Age" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wKL-ei-m8k">
                                                <rect key="frame" x="0.0" y="25" width="390" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="AgeFieldId"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add Patient Diagnosis" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vic-gf-12J">
                                                <rect key="frame" x="0.0" y="25" width="390" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="DiagnosisFieldId"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                <rect key="frame" x="20" y="819.66666666666663" width="390" height="38.333333333333371"/>
                                <color key="backgroundColor" name="SecondaryColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="UpdatePatientButtonId"/>
                                <color key="tintColor" name="Background"/>
                                <state key="normal" title="Button"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add Patient Id" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nDJ-Oc-jG8">
                                                <rect key="frame" x="0.0" y="24" width="390" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="IdTextFieldId"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                <rect key="frame" x="20" y="819.66666666666663" width="390" height="38.333333333333371"/>
                                <color key="backgroundColor" name="SecondaryColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="AddPatientButtonId"/>
                                <color key="tintColor" name="Background"/>
                                <state key="normal" title="Button"/>
...
