...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Tm-TU-rVn">
                                <rect key="frame" x="240" y="0.0" width="40" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="EditPatientButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="40" id="Tqv-vQ-WLh"/>
                                </constraints>
                                <color key="tintColor" name="SecondaryColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="pencil.line" catalog="system" title=""/>
                                <connections>
                                    <action selector="editPatientAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="tjm-Wr-HzM"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wq6-W2-bDZ">
                                <rect key="frame" x="280" y="0.0" width="40" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="DeletePatientButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="40" id="lGr-ac-gVD"/>
                                </constraints>
                                <color key="tintColor" name="SecondaryColor"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="trash" catalog="system" title=""/>
...
